sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:12: error: reassignment to val
    end = end - 1
        ^AlgCocktailSort2:16: error: reassignment to val
    beg = beg + 1
        ^